# modorganizer-bsa_extractor

./: CMakeLists.txt
src/: bsa_extractor_en.ts  bsaextractor.cpp
